# agent

./: AGENTS.md  Cargo.toml  DEBUG.md  FIX.md  IMPLEMENTATION_NOTES.md  PERM.md  PLAN.md  PORTING.md  SANDBOX.md  SKETCH.md  TOKIO.md  agent.sh  config.toml  server.sh
agent/: Cargo.toml
agent-cli/: Cargo.toml
agent-cli/src/: app.rs  client.rs  interactive.rs  lib.rs  local.rs  main.rs  markdown.rs  terminal.rs  tui.rs
agent-core/: Cargo.toml
agent-core/src/: agent.rs  child_io.rs  config.rs  context_files.rs  hooks.rs  lib.rs  logging.rs  provider.rs  rpc.rs  store.rs  tree_io.rs  types.rs  util.rs
agent-core/src/tools/: bash.rs  edit.rs  find.rs  git.rs  grep.rs  ls.rs  mod.rs  read.rs  search.rs  write.rs
agent-server/: Cargo.toml
agent-server/src/: auto_title.rs  handlers.rs  http.rs  lib.rs  lifecycle.rs  llm_client.rs  llm_handler.rs  main.rs  provider.rs  routes.rs  sandbox.rs  server.rs  spawner.rs  worker_ctx.rs  worker_loop.rs  worker_task.rs  ws.rs  ws_client.rs
agent-worker/: Cargo.toml
agent-worker/src/: agent.rs  context_files.rs  lib.rs  llm.rs  lsp_client.rs  store.rs  thinking.rs  turn.rs  util.rs
agent-worker/src/tools/: bash.rs  edit.rs  find.rs  git.rs  grep.rs  ls.rs  mod.rs  read.rs  restore_edit.rs  search.rs  util.rs  write.rs
agent-worker/tests/: end_to_end.rs  lsp_direct_test.rs  lsp_ra_test.rs
agent/src/: main.rs
scripts/: fibonacci.py
