[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core    = { path = "../agent-core" }
agent-server  = { path = "../agent-server" }
ureq          = "3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
clap          = { version = "4", features = ["derive"] }
termion       = "4"
anyhow        = "1"
ctrlc         = "3.4"
tungstenite   = { version = "0.21", default-features = false, features = ["handshake"] }
url           = "2"
nix           = { version = "0.29", features = ["poll", "socket"] }
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
