[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core    = { path = "../agent-core" }
agent-server  = { path = "../agent-server" }
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
clap          = { version = "4", features = ["derive"] }
crossterm     = { version = "0.28", features = ["event-stream"] }
tokio-tungstenite = { version = "0.21", features = ["connect"] }
futures-util  = "0.3"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
thiserror     = "1"
ratatui       = "0.29"
tui-textarea  = { version = "0.7", features = ["ratatui"] }
tokio         = { version = "1", features = ["rt", "macros", "sync", "time", "net", "process", "signal", "io-util", "fs"] }
