[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde                   = { version = "1", features = ["derive"] }
serde_json              = "1"
uuid                    = { version = "1", features = ["v4"] }
chrono                  = { version = "0.4", features = ["serde"] }
ureq                    = "3"
unicode-normalization   = "0.1"
regex                   = "1"
walkdir                 = "2"
notify                  = "8"
log                     = "0.4"
env_logger              = "0.11"
thiserror               = "1"
nix                     = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
