[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde                   = { version = "1", features = ["derive"] }
serde_json              = "1"
toml                    = "0.8"
chrono                  = { version = "0.4", features = ["serde"] }
log                     = "0.4"
env_logger              = "0.11"
thiserror               = "1"

[dev-dependencies]
tempfile = "3"
