[package]
name = "agent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core    = { path = "../agent-core" }
httparse      = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
log           = "0.4"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
