[package]
name = "agent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core    = { path = "../agent-core" }
httparse      = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
log           = "0.4"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
ureq          = { version = "3", features = ["json"] }
tungstenite   = { version = "0.21", default-features = false, features = ["handshake"] }
thiserror    = "1"
signal-hook   = "0.3"
nix           = { version = "0.29", features = ["poll", "fs", "signal", "process"] }
rustls        = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots  = "0.26"

[dev-dependencies]
tempfile = "3"