[package]
name = "agent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core    = { path = "../agent-core" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
log           = "0.4"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
thiserror    = "1"
tokio         = { version = "1", features = ["rt", "macros", "net", "process", "sync", "fs", "io-util", "time", "signal"] }
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio-stream = "0.1"
tokio-util    = { version = "0.7", features = ["io"] }
axum          = { version = "0.8", features = ["ws"] }
tower         = "0.5"
hyper         = { version = "1", features = ["server", "http1"] }
hyper-util    = { version = "0.1", features = ["server", "tokio"] }

[dev-dependencies]
tempfile = "3"