[package]
name = "agent-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core             = { path = "../agent-core" }
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"
log                    = "0.4"
chrono                 = { version = "0.4", features = ["serde"] }
regex                  = "1"
walkdir                = "2"
unicode-normalization  = "0.1"
nix                    = { version = "0.29", features = ["signal", "process", "poll", "fs"] }
ctrlc                  = { version = "3.4", features = ["termination"] }
lsp-types              = "0.95"

[dev-dependencies]
tempfile = "3"
