[package]
name = "agent-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core             = { path = "../agent-core" }
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"
log                    = "0.4"
chrono                 = { version = "0.4", features = ["serde"] }
regex                  = "1"
walkdir                = "2"
unicode-normalization  = "0.1"
lsp-types              = "0.95"
thiserror              = "1"
tokio                  = { version = "1", features = ["rt", "macros", "process", "fs", "sync", "io-util", "time", "signal", "io-std"] }
async-trait            = "0.1"
futures-util           = "0.3"

[dev-dependencies]
tempfile = "3"
